--- a/RunAndGun/RunAndGun/app.config
+++ b/RunAndGun/RunAndGun/app.config
@@ -1,3 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+  <system.diagnostics>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="textWriterListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="ApplicationLog.txt"/>
+        <remove name="Default"/>
+      </listeners>
+    </trace>
+  </system.diagnostics>
+</configuration>
