--- a/TiledSharp-0.9.1r0/TiledSharp/TiledSharp.csproj
+++ b/TiledSharp-0.9.1r0/TiledSharp/TiledSharp.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.XML" />
