--- a/TiledSharp-0.9.1r0/TiledSharp/TiledSharp.csproj
+++ b/TiledSharp-0.9.1r0/TiledSharp/TiledSharp.csproj
@@ -35,9 +35,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <CodeAnalysisRuleSet>SecurityRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>TiledSharp.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -66,6 +70,9 @@
     <Compile Include="src\zlib\ZlibStream.cs" />
     <Compile Include="src\ObjectGroup.cs" />
     <Compile Include="src\ImageLayer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="TiledSharp.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
