--- a/RunAndGun/RunAndGun/RunAndGun.csproj
+++ b/RunAndGun/RunAndGun/RunAndGun.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Actors\Enemy.cs" />
     <Compile Include="Actors\Player.cs" />
     <Compile Include="InputState.cs" />
+    <Compile Include="Platform.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
