--- a/RunAndGun/RunAndGun/RunAndGun.csproj
+++ b/RunAndGun/RunAndGun/RunAndGun.csproj
@@ -165,16 +165,18 @@
     <Compile Include="Animation.cs" />
     <Compile Include="Actors\Enemy.cs" />
     <Compile Include="Actors\Player.cs" />
+    <Compile Include="Actors\Capsule.cs" />
+    <Compile Include="GameObjects\Gun.cs" />
     <Compile Include="InputState.cs" />
-    <Compile Include="Platform.cs" />
-    <Compile Include="Projectile.cs" />
+    <Compile Include="GameObjects\Platform.cs" />
+    <Compile Include="GameObjects\Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="RectangleExtensions.cs" />
     <Compile Include="PlayerSpriteCollection.cs" />
     <Compile Include="Stage.cs" />
-    <Compile Include="StageBridge.cs" />
+    <Compile Include="GameObjects\StageBridge.cs" />
     <Compile Include="StageObject.cs" />
     <Compile Include="StageTile.cs" />
     <Compile Include="TitleScreen.cs" />
