--- a/RunAndGun/RunAndGun/RunAndGun.csproj
+++ b/RunAndGun/RunAndGun/RunAndGun.csproj
@@ -17,8 +17,8 @@
     <XnaProfile>Reach</XnaProfile>
     <XnaCrossPlatformGroupID>777da9a4-f383-4df7-bcf6-c7da048c1af7</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
-    <ApplicationIcon>Game.ico</ApplicationIcon>
-    <Thumbnail>GameThumbnail.png</Thumbnail>
+    <ApplicationIcon>Resources\Game.ico</ApplicationIcon>
+    <Thumbnail>Resources\GameThumbnail.png</Thumbnail>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <SccProjectName>
     </SccProjectName>
@@ -43,7 +43,7 @@
     <PublisherName>Jim Comiskey</PublisherName>
     <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>32</ApplicationRevision>
+    <ApplicationRevision>33</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -95,7 +95,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>Contravania.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>Resources\Contravania.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
@@ -168,23 +168,24 @@
     <Compile Include="Actors\Capsule.cs" />
     <Compile Include="Animations\SpreadBulletAnimation.cs" />
     <Compile Include="GameObjects\Gun.cs" />
-    <Compile Include="InputState.cs" />
-    <Compile Include="GameObjects\Platform.cs" />
+    <Compile Include="GameObjects\InputState.cs" />
+    <Compile Include="StageObjects\Platform.cs" />
     <Compile Include="GameObjects\Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="RectangleExtensions.cs" />
-    <Compile Include="PlayerSpriteCollection.cs" />
-    <Compile Include="Stage.cs" />
-    <Compile Include="GameObjects\StageBridge.cs" />
-    <Compile Include="StageObject.cs" />
-    <Compile Include="StageTile.cs" />
-    <Compile Include="TitleScreen.cs" />
+    <Compile Include="GameObjects\RectangleExtensions.cs" />
+    <Compile Include="Animations\PlayerSpriteCollection.cs" />
+    <Compile Include="StageObjects\EnemySpawnLocation.cs" />
+    <Compile Include="StageObjects\Stage.cs" />
+    <Compile Include="StageObjects\StageBridge.cs" />
+    <Compile Include="StageObjects\StageObject.cs" />
+    <Compile Include="StageObjects\StageTile.cs" />
+    <Compile Include="GameObjects\TitleScreen.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Game.ico" />
-    <Content Include="GameThumbnail.png" />
+    <Content Include="Resources\Game.ico" />
+    <Content Include="Resources\GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ContraVania\ContraVania.contentproj">
@@ -233,11 +234,8 @@
     <Content Include="LevelMaps\Contra1-1Jungle.tmx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="Contravania.pfx" />
+    <None Include="Resources\Contravania.pfx" />
     <None Include="Properties\app.manifest" />
-    <None Include="RunAndGun_1_TemporaryKey.pfx" />
-    <None Include="RunAndGun_2_TemporaryKey.pfx" />
-    <None Include="RunAndGun_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
