Override GameTime with CVGameTime class so that time calculations can be manipulated, to slow down or speed up game time, for test purposes.

--- a/RunAndGun/RunAndGun/RunAndGun.csproj
+++ b/RunAndGun/RunAndGun/RunAndGun.csproj
@@ -187,6 +187,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>App.settings</DependentUpon>
     </Compile>
+    <Compile Include="GameObjects\CVGameTime.cs" />
     <Compile Include="GameObjects\Gun.cs" />
     <Compile Include="GameObjects\InputState.cs" />
     <Compile Include="StageObjects\Platform.cs" />
