Get game working with Monogame

--- a/TiledSharp-0.9.1r0/TiledSharp/TiledSharp.csproj
+++ b/TiledSharp-0.9.1r0/TiledSharp/TiledSharp.csproj
@@ -38,7 +38,7 @@
     <CodeAnalysisRuleSet>SecurityRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>TiledSharp.pfx</AssemblyOriginatorKeyFile>
