--- a/RunAndGun/RunAndGun/Contravania.csproj
+++ b/RunAndGun/RunAndGun/Contravania.csproj
@@ -1,42 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <!--<Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props')" />-->
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <TargetFramework>net9.0-windows</TargetFramework>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{34920DC8-5E8D-41B6-A6A1-DFB2CD64A332}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Contravania</RootNamespace>
-    <AssemblyName>Contravania</AssemblyName>
-    <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>Windows</MonoGamePlatform>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\$(MonoGamePlatform)\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\$(MonoGamePlatform)\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>TRACE;WINDOWS</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>  
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
@@ -44,51 +13,11 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Actors\Actor.cs" />
-    <Compile Include="Actors\Cannon.cs" />
-    <Compile Include="Actors\Capsule.cs" />
-    <Compile Include="Actors\Enemy.cs" />
-    <Compile Include="Actors\FootSoldier.cs" />
-    <Compile Include="Actors\Level1BossBomber.cs" />
-    <Compile Include="Actors\Level1BossPanel.cs" />
-    <Compile Include="Actors\Panel.cs" />
-    <Compile Include="Actors\Player.cs" />
-    <Compile Include="Actors\PlayerItem.cs" />
-    <Compile Include="Actors\Sniper.cs" />
-    <Compile Include="Actors\Turret.cs" />
-    <Compile Include="Actors\Zombie.cs" />
-    <Compile Include="Animations\Animation.cs" />
-    <Compile Include="Animations\PlayerSpriteCollection.cs" />
-    <Compile Include="Animations\SpreadBulletAnimation.cs" />
-    <Compile Include="App.Designer.cs" />
-    <Compile Include="App1.Designer.cs">
+    <Compile Update="App1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>App.settings</DependentUpon>
     </Compile>
-    <Compile Include="Game.cs" />
-    <Compile Include="GameObjects\CVGameTime.cs" />
-    <Compile Include="GameObjects\EnemyGun.cs" />
-    <Compile Include="GameObjects\InputState.cs" />
-    <Compile Include="GameObjects\PlayerGun.cs" />
-    <Compile Include="GameObjects\Projectile.cs" />
-    <Compile Include="GameObjects\TargetingLogic.cs" />
-    <Compile Include="GameObjects\TitleScreen.cs" />
-    <Compile Include="Helpers\PointHelper.cs" />
-    <Compile Include="Helpers\RectangleExtensions.cs" />
-    <Compile Include="Helpers\TextureHelper.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StageObjects\EnemySpawnLocation.cs" />
-    <Compile Include="StageObjects\Platform.cs" />
-    <Compile Include="StageObjects\Stage.cs" />
-    <Compile Include="StageObjects\StageBridge.cs" />
-    <Compile Include="StageObjects\StageObject.cs" />
-    <Compile Include="StageObjects\StageTile.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
@@ -98,28 +27,22 @@
   <ItemGroup>
     <MonoGameContentReference Include="..\RunAndGunContent\RunAndGunContent.mgcb" />
     <MonoGameContentReference Include="..\..\ContraVania\ContraVania.mgcb" />
-    <None Include="app.config" />
-    <None Include="app.manifest" />
-    <None Include="App.settings">
+    <None Update="App.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>App1.Designer.cs</LastGenOutput>
     </None>
-    <None Include="LevelMaps\Castlevania1-1-1.tmx">
+    <None Update="LevelMaps\Castlevania1-1-1.tmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="LevelMaps\Castlevania1-1-2.tmx">
+    <None Update="LevelMaps\Castlevania1-1-2.tmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="LevelMaps\Contra1-1Jungle.tmx">
+    <None Update="LevelMaps\Contra1-1Jungle.tmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\TiledSharp-0.9.1r0\TiledSharp\TiledSharp.csproj">
-      <Project>{e4130f8d-d301-4e0c-916d-489c4a23c9b1}</Project>
-      <Name>TiledSharp</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\..\TiledSharp-0.9.1r0\TiledSharp\TiledSharp.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105" />
@@ -127,16 +50,11 @@
       <Version>3.8.2.1105</Version>
     </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <PackageReference Include="OpenTK" Version="4.8.2" />
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
   </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
